﻿- Add bounds checks to scaling factors


Version 0.9.6.2 -

- Fix regression causing building prop modification to unpause games


Version 0.9.6.1 -

- Add CheckReferences call when modifying building props to catch situations where final SpecialPlace prop has been replaced


Version 0.9.6 -

- Major refactor of building and network replacement
- Increase offset slider displayed maximum to 32
- Implement AlgernonCommons
- Adjust debugging logging
- Update UnifiedUI


Version 0.9.5.1 -

- Fix preview for all- replacements not showing when adjusting existing all- replacments


Version 0.9.5 -

- Enable adding props to network lanes with no existing laneprop array
- Fix added random building props always showing the same variations if more than one is added to the same prefab
- Update generation of blank config files
- Update translation framework


Version 0.9.4.4 -

- Lane highlighting now follows same modifier key rules as prop/tree highlighting
- Fix preview updates not triggering when slider values are out-of-range
- Fix network 'add prop' button not updating state on selected lange change
- Fix added netowrk props sometimes rotating 180 degrees on load in some networks


Version 0.9.4.3 -

- Implement customizable repeat distances for added network props
- Sliders now correctly display out-of-range values


Version 0.9.4.2 -

- Fix map tree replacement sometimes displaying prop lists


Version 0.9.4.1 -

- Fix exception when loading replacement config file with conflicting added prop references


Version 0.9.4 -

- Major new feature: add props to network prefabs
- Add lane selection when using individual replacement mode on networks
- Options panel now automatically refreshes on language change
- Return hotkey handling to UUI


Version 0.9.3.1 -

- Fix NullReferenceException with added prop detection for buildings with no intial props


Version 0.9.3 -

- Major new feature: add props to building prefabs
- Add hotkey to toggle disabling of vanilla tree tool