@@ -172,7 +172,11 @@ namespace BOB
 
                 // Scale button.
                 UIButton scaleButton = AddIconButton(this, MiddleX, ToggleY, ToggleSize, "BOB_PNL_SCA", UITextures.LoadQuadSpriteAtlas("BOB-Scale"));
-                scaleButton.eventClicked += (c, clickEvent) => StandalonePanelManager<BOBScalePanel>.Create();
+                scaleButton.eventClicked += (c, clickEvent) =>
+                {
+                    StandalonePanelManager<BOBScalePanel>.Create();
+                    StandalonePanelManager<BOBScalePanel>.Panel.SelectPrefab(SelectedReplacementPrefab);
+                };
 
                 // Preview image.
                 _previewPanel = AddUIComponent<PreviewPanel>();
