@@ -1,4 +1,5 @@
 ﻿- Add bounds checks to scaling factors
+- Automatically pass current selection to scaling and random panels
 
 
 Version 0.9.6.2 -
